--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-My project to learn git and how to make a simple static website without sus Javascript.
-I'm currently reading git book at page 27th.
-another line
+I'm trying to run a website
